--- a/resurser.html
+++ b/resurser.html
@@ -21,17 +21,7 @@
         <li><button type="button">Sign Up</button></li>
       </ul>
     </header>
-    <main>
-      <section>
-        <h1></h1>
-        <p></p>
-        <ul>
-          <li><button type="button"></button></li>
-          <li<button type="button"></button></li>
-        </ul>
-        <img src="" alt="">
-      </section>
-    </main>
+    <main></main>
     <footer></footer>
   </body>
 </html>
