--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href=""><img src="" alt="logo">Product/a>
+        <a href="./index.html"><img src="" alt="logo">Product</a>
         <ul>
           <li><a href="./index.html">Product</a></li>
           <li><a href="./pricsing.html">Pricing</a></li>
