--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"><img src="" alt="logo">Product</a>
+        <a href="./index.html"><img src="/images/logo.png" alt="logo">Product</a>
         <ul>
           <li><a href="./index.html">Product</a></li>
           <li><a href="./pricsing.html">Pricing</a></li>
@@ -23,13 +23,13 @@
     </header>
     <main>
       <section>
-        <h1></h1>
-        <p></p>
+        <h1>Work at the speed of thought</h1>
+        <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
         <ul>
-          <li><button type="button"></button></li>
-          <li<button type="button"></button></li>
+          <li><button type="button">Get started</button></li>
+          <li<button type="button"></button>Watch the Video</li>
         </ul>
-        <img src="" alt="">
+        <img src="/images/hero-img.png" alt="Hero">
       </section>
     </main>
     <footer></footer>
