--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"><img src="/images/logo.png" alt="logo">Product</a>
+        <a href="./index.html"
+          ><img src="/images/logo.png" alt="logo" />Product</a
+        >
         <ul>
           <li><a href="./index.html">Product</a></li>
           <li><a href="./pricsing.html">Pricing</a></li>
@@ -24,12 +26,15 @@
     <main>
       <section>
         <h1>Work at the speed of thought</h1>
-        <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.</p>
+        <p>
+          Tools, tutorials, design and innovation experts, all in one place! The
+          most intuitive way to imagine your next user experience.
+        </p>
         <ul>
           <li><button type="button">Get started</button></li>
-          <li<button type="button"></button>Watch the Video</li>
+          <li><button type="button">Watch the Video</button></li>
         </ul>
-        <img src="/images/hero-img.png" alt="Hero">
+        <img src="/images/hero-img.png" alt="Hero" />
       </section>
     </main>
     <footer></footer>
