--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <nav>
         <a href="./index.html"
-          ><img src="/images/logo.png" alt="logo" />Product</a
+          ><img src="./images/logo.png" alt="logo" />Product</a
         >
         <ul>
           <li><a href="./index.html">Product</a></li>
@@ -34,7 +34,7 @@
           <li><button type="button">Get started</button></li>
           <li><button type="button">Watch the Video</button></li>
         </ul>
-        <img src="/images/hero-img.png" alt="Hero" />
+        <img src="./images/hero-img.png" alt="Hero" />
       </section>
     </main>
     <footer></footer>
