--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Product" content="width=device-width, initial-scale=1.0" />
     <title>Bisnes promotion</title>
   </head>
   <body>
     <header>
       <nav>
         <a href="./index.html"
-          ><img src="./images/logo.png" alt="logo" />Product</a
+          ><img src="./images/logo-min.png" alt="logo" /> Product</a
         >
         <ul>
           <li><a href="./index.html">Product</a></li>
@@ -24,6 +24,7 @@
       </ul>
     </header>
     <main>
+      <!--section 1-->
       <section>
         <h1>Work at the speed of thought</h1>
         <p>
@@ -34,9 +35,10 @@
           <li><button type="button">Get started</button></li>
           <li><button type="button">Watch the Video</button></li>
         </ul>
-        <img src="./images/hero-img.png" alt="Hero" />
+        <img src="./images/hero-img-min.png" alt="Hero" width="610" />
       </section>
     </main>
+    <!--section 2-->
     <section>
       <h2>Product was Built Specifically for You</h2>
       <ul>
@@ -58,6 +60,178 @@
         </li>
       </ul>
       <button type="button">SIGN UP NOW</button>
+    </section>
+    <!--section 3-->
+    <section>
+      <p>Effortless Validation for</p>
+      <h2>Management</h2>
+      <p>
+        The Myspace page defines the individual, his or her characteristics,
+        traits, personal choices and the overall personality of the person.
+      </p>
+      <li>
+        <ul>
+          <h3>Accessory makers</h3>
+          <p>
+            While most people enjoy casino gambling, sports betting, lottery and
+            bingo playing for the fun
+          </p>
+        </ul>
+        <ul>
+          <h3>Alterationists</h3>
+          <p>
+            If you are looking for a new way to promote your business that won’t
+            cost you more money,
+          </p>
+        </ul>
+        <img src="" alt="" />
+      </li>
+    </section>
+    <!--section 4-->
+    <section>
+      <img src="" alt="" />
+      <p>Easier decision making for</p>
+      <h2>Customer Support</h2>
+      <p>
+        The Myspace page defines the individual, his or her characteristics,
+        traits, personal choices and the overall personality of the person.
+      </p>
+      <li>
+        <ul>
+          <p>Never worry about overpaying for your energy again.</p>
+        </ul>
+        <ul>
+          <p>
+            We will only switch you to energy companies that we trust and will
+            treat you right
+          </p>
+        </ul>
+        <ul>
+          <p>We track the markets daily and know where the savings are.</p>
+        </ul>
+      </li>
+    </section>
+    <!-- section 5-->
+    <section>
+      <p>Optimisation for</p>
+      <h2>Collaborative</h2>
+      <p>
+        Few would argue that, despite the advancements of feminism over the past
+        three decades, women still face a double standard when it comes to their
+        behavior.
+      </p>
+      <ul>
+        <li>
+          <h3>Accessory makers</h3>
+          <p>
+            While most people enjoy casino gambling, sports betting, lottery and
+            bingo playing for the fun
+          </p>
+        </li>
+        <li>
+          <h3>Alterationists</h3>
+          <p>
+            If you are looking for a new way to promote your business that won’t
+            cost you more money,
+          </p>
+        </li>
+      </ul>
+      <img src="" alt="" />
+    </section>
+    <!-- section 6-->
+    <section>
+      <h2>Quick & Easy Process</h2>
+      <p>
+        Do you require some help for your project: Conception workshop,
+        prototyping, marketing strategy, landing page, Ux/UI?
+      </p>
+      <ul>
+        <li>
+          <img src="" alt="" />
+          <p>I can take care of your pitch</p>
+        </li>
+        <li>
+          <p>I can prototype your app</p>
+          <img src="" alt="" />
+        </li>
+        <li>
+          <p>I can take care of your pitch</p>
+          <img src="" alt="" />
+        </li>
+        <li>
+          <img src="" alt="" />
+          <p>I can help marketing strategy</p>
+        </li>
+      </ul>
+      <button type="button">Contact our expert</button>
+    </section>
+    <!-- section 7-->
+    <section>
+      <h2></h2>
+      <p></p>
+      <ul>
+        <li>
+          <img src="" alt="" />
+          <p>By Wahid Ari | 03 March 2019</p>
+          <h3>Increasing Prosperity With Positive Thinking</h3>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <p>By Wahid Ari | 03 March 2019</p>
+          <h3>Motivation Is The First Step To Success</h3>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <p>By Wahid Ari | 03 March 2019</p>
+          <h3>Success Steps For Your Personal Or Business</h3>
+        </li>
+      </ul>
+    </section>
+    <!--section 8-->
+    <section>
+      <h2></h2>
+      <p></p>
+      <ul>
+        <li>
+          <h3>Free</h3>
+          <p>Brief price description</p>
+          <p>0</p>
+          <p>$</p>
+          <p>Per / month</p>
+          <ul>
+            <li>Only 2 Operators</li>
+            <li>Notifications</li>
+            <li>Landing Pages</li>
+          </ul>
+          <button type="button">Order Now</button>
+        </li>
+        <li>
+          <h3>Standard</h3>
+          <p>Brief price description</p>
+          <p>5</p>
+          <p>$</p>
+          <p>Per / month</p>
+          <ul>
+            <li>5+ Operators</li>
+            <li>Notifications</li>
+            <li>Landing Pages</li>
+          </ul>
+          <button type="button">Order Now</button>
+        </li>
+        <li>
+          <h3>Premium</h3>
+          <p>Brief price description</p>
+          <p>10</p>
+          <p>$</p>
+          <p>Per / month</p>
+          <ul>
+            <li>10+ Operators</li>
+            <li>Notifications</li>
+            <li>Landing Pages</li>
+          </ul>
+          <button type="button">Order Now</button>
+        </li>
+      </ul>
     </section>
     <footer></footer>
   </body>
