--- a/index.html
+++ b/index.html
@@ -37,202 +37,288 @@
         </ul>
         <img src="./images/hero-img-min.png" alt="Hero" width="610" />
       </section>
+
+      <!--section 2-->
+      <section>
+        <h2>Product was Built Specifically for You</h2>
+        <ul>
+          <li>
+            <h3>First click tests</h3>
+            <p>While most people enjoy casino gambling,</p>
+          </li>
+          <li>
+            <h3>Design surveys</h3>
+            <p>Sports betting, lottery and bingo playing for the fun</p>
+          </li>
+          <li>
+            <h3>Preference tests</h3>
+            <p>The Myspace page defines the individual.</p>
+          </li>
+          <li>
+            <h3>Five second tests</h3>
+            <p>Personal choices and the overall personality of the person.</p>
+          </li>
+        </ul>
+        <button type="button">SIGN UP NOW</button>
+      </section>
+      <!--section 3-->
+      <section>
+        <p>Effortless Validation for</p>
+        <h2>Management</h2>
+        <p>
+          The Myspace page defines the individual, his or her characteristics,
+          traits, personal choices and the overall personality of the person.
+        </p>
+        <li>
+          <ul>
+            <h3>Accessory makers</h3>
+            <p>
+              While most people enjoy casino gambling, sports betting, lottery
+              and bingo playing for the fun
+            </p>
+          </ul>
+          <ul>
+            <h3>Alterationists</h3>
+            <p>
+              If you are looking for a new way to promote your business that
+              won’t cost you more money,
+            </p>
+          </ul>
+          <img src="./images/management-img-min.png" alt="management" />
+        </li>
+      </section>
+      <!--section 4-->
+      <section>
+        <img src="./images/support-img-min.png" alt="support" />
+        <p>Easier decision making for</p>
+        <h2>Customer Support</h2>
+        <p>
+          The Myspace page defines the individual, his or her characteristics,
+          traits, personal choices and the overall personality of the person.
+        </p>
+        <li>
+          <ul>
+            <p>Never worry about overpaying for your energy again.</p>
+          </ul>
+          <ul>
+            <p>
+              We will only switch you to energy companies that we trust and will
+              treat you right
+            </p>
+          </ul>
+          <ul>
+            <p>We track the markets daily and know where the savings are.</p>
+          </ul>
+        </li>
+      </section>
+      <!-- section 5-->
+      <section>
+        <p>Optimisation for</p>
+        <h2>Collaborative</h2>
+        <p>
+          Few would argue that, despite the advancements of feminism over the
+          past three decades, women still face a double standard when it comes
+          to their behavior.
+        </p>
+        <ul>
+          <li>
+            <h3>Accessory makers</h3>
+            <p>
+              While most people enjoy casino gambling, sports betting, lottery
+              and bingo playing for the fun
+            </p>
+          </li>
+          <li>
+            <h3>Alterationists</h3>
+            <p>
+              If you are looking for a new way to promote your business that
+              won’t cost you more money,
+            </p>
+          </li>
+        </ul>
+        <img src="./images/collaboration-img-min.png" alt="collaboration" />
+      </section>
+      <!-- section 6-->
+      <section>
+        <h2>Quick & Easy Process</h2>
+        <p>
+          Do you require some help for your project: Conception workshop,
+          prototyping, marketing strategy, landing page, Ux/UI?
+        </p>
+        <ul>
+          <li>
+            <img src="./images/avatar-min.png" alt="hero-1" />
+            <p>I can take care of your pitch</p>
+          </li>
+          <li>
+            <p>I can prototype your app</p>
+            <img src="./images/avatar-min4.png" alt="hero-2" />
+          </li>
+          <li>
+            <p>I can take care of your pitch</p>
+            <img src="./images/avatar2-min.png" alt="hero-3" />
+          </li>
+          <li>
+            <img src="./images/avatar3-min.png" alt="hero-4" />
+            <p>I can help marketing strategy</p>
+          </li>
+        </ul>
+        <button type="button">Contact our expert</button>
+      </section>
+      <!-- section 7-->
+      <section>
+        <h2></h2>
+        <p></p>
+        <ul>
+          <li>
+            <img src="./images/imagbg-min.jpg" alt="Positive Thinking" />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Increasing Prosperity With Positive Thinking</h3>
+          </li>
+          <li>
+            <img src="./images/Bitmap2-min.jpg" alt="Step To Success" />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Motivation Is The First Step To Success</h3>
+          </li>
+          <li>
+            <img src="./images/Bitmap-min.jpg" alt="Steps" />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Success Steps For Your Personal Or Business</h3>
+          </li>
+        </ul>
+      </section>
+      <!--section 8-->
+      <section>
+        <h2></h2>
+        <p></p>
+        <ul>
+          <li>
+            <h3>Free</h3>
+            <p>Brief price description</p>
+            <p>0</p>
+            <p>$</p>
+            <p>Per / month</p>
+            <p>Only 2 Operators</p>
+            <p>Notifications</p>
+            <p>Landing Pages</p>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Standart</h3>
+            <p>Brief price description</p>
+            <p>5</p>
+            <p>$</p>
+            <p>Per / month</p>
+            <p>Only 2 Operators</p>
+            <p>Notifications</p>
+            <p>Landing Pages</p>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Premium</h3>
+            <p>Brief price description</p>
+            <p>10</p>
+            <p>$</p>
+            <p>Per / month</p>
+            <p>Only 2 Operators</p>
+            <p>Notifications</p>
+            <p>Landing Pages</p>
+            <button type="button">Order Now</button>
+          </li>
+        </ul>
+      </section>
+      <!-- section 9-->
+      <section>
+        <h2></h2>
+        <p></p>
+        <ul>
+          <li>
+            <img src="./images/Group 204.png" alt="stars" />
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img src="./images/Ellipse3-min.png" alt="client1" />
+            <p>Wahid Ari</p>
+            <p>Designer</p>
+          </li>
+          <li>
+            <img src="./images/Group 204.png" alt="stars" />
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img src="./images/Ellipse2-min.png" alt="client2" />
+            <p>Wahid Ari</p>
+            <p>Designer</p>
+          </li>
+          <li>
+            <img src="./images/Group 204.png" alt="stars" />
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img src="./images/Ellipse4-min.png" alt="client3" />
+            <p>Wahid Ari</p>
+            <p>Designer</p>
+          </li>
+        </ul>
+      </section>
+      <!-- section 10-->
+      <section>
+        <h2>Join 100 Compannies who boost their business with Product</h2>
+        <img src="./images/screen-min.png" alt="join" />
+        <button type="button">Get This</button>
+      </section>
     </main>
-    <!--section 2-->
-    <section>
-      <h2>Product was Built Specifically for You</h2>
+    <!-- footer-->
+    <footer> 
+      <a href="./index.html"><img src="./images/logo-min.png" alt="logo" /> Product</a>
       <ul>
         <li>
-          <h3>First click tests</h3>
-          <p>While most people enjoy casino gambling,</p>
+          <a href=""><img src="" alt="instagram"></a>
         </li>
         <li>
-          <h3>Design surveys</h3>
-          <p>Sports betting, lottery and bingo playing for the fun</p>
+          <a href=""><img src="" alt="facebook"></a>
         </li>
         <li>
-          <h3>Preference tests</h3>
-          <p>The Myspace page defines the individual.</p>
-        </li>
-        <li>
-          <h3>Five second tests</h3>
-          <p>Personal choices and the overall personality of the person.</p>
+          <a href=""><img src="" alt="twitter"></a>
         </li>
       </ul>
-      <button type="button">SIGN UP NOW</button>
-    </section>
-    <!--section 3-->
-    <section>
-      <p>Effortless Validation for</p>
-      <h2>Management</h2>
-      <p>
-        The Myspace page defines the individual, his or her characteristics,
-        traits, personal choices and the overall personality of the person.
-      </p>
-      <li>
-        <ul>
-          <h3>Accessory makers</h3>
-          <p>
-            While most people enjoy casino gambling, sports betting, lottery and
-            bingo playing for the fun
-          </p>
-        </ul>
-        <ul>
-          <h3>Alterationists</h3>
-          <p>
-            If you are looking for a new way to promote your business that won’t
-            cost you more money,
-          </p>
-        </ul>
-        <img src="" alt="" />
-      </li>
-    </section>
-    <!--section 4-->
-    <section>
-      <img src="" alt="" />
-      <p>Easier decision making for</p>
-      <h2>Customer Support</h2>
-      <p>
-        The Myspace page defines the individual, his or her characteristics,
-        traits, personal choices and the overall personality of the person.
-      </p>
-      <li>
-        <ul>
-          <p>Never worry about overpaying for your energy again.</p>
-        </ul>
-        <ul>
-          <p>
-            We will only switch you to energy companies that we trust and will
-            treat you right
-          </p>
-        </ul>
-        <ul>
-          <p>We track the markets daily and know where the savings are.</p>
-        </ul>
-      </li>
-    </section>
-    <!-- section 5-->
-    <section>
-      <p>Optimisation for</p>
-      <h2>Collaborative</h2>
-      <p>
-        Few would argue that, despite the advancements of feminism over the past
-        three decades, women still face a double standard when it comes to their
-        behavior.
-      </p>
+      <h3>Resource</h3>
       <ul>
         <li>
-          <h3>Accessory makers</h3>
-          <p>
-            While most people enjoy casino gambling, sports betting, lottery and
-            bingo playing for the fun
-          </p>
+          <a href="">About Us</a>
         </li>
         <li>
-          <h3>Alterationists</h3>
-          <p>
-            If you are looking for a new way to promote your business that won’t
-            cost you more money,
-          </p>
+          <a href="">Blog</a>
+        </li>
+        <li>
+          <a href="">Contact</a>
+        </li>
+        <li>
+          <a href="">FAQ</a>
         </li>
       </ul>
-      <img src="" alt="" />
-    </section>
-    <!-- section 6-->
-    <section>
-      <h2>Quick & Easy Process</h2>
-      <p>
-        Do you require some help for your project: Conception workshop,
-        prototyping, marketing strategy, landing page, Ux/UI?
-      </p>
+      <h3>Legal Stuff</h3>
       <ul>
         <li>
-          <img src="" alt="" />
-          <p>I can take care of your pitch</p>
+          <a href="">Disclaimer</a>
         </li>
         <li>
-          <p>I can prototype your app</p>
-          <img src="" alt="" />
+          <a href="">Financing</a>
         </li>
         <li>
-          <p>I can take care of your pitch</p>
-          <img src="" alt="" />
-        </li>
-        <li>
-          <img src="" alt="" />
-          <p>I can help marketing strategy</p>
+          <a href="">Privacy Policy</a>
         </li>
       </ul>
-      <button type="button">Contact our expert</button>
-    </section>
-    <!-- section 7-->
-    <section>
-      <h2></h2>
-      <p></p>
+      
       <ul>
-        <li>
-          <img src="" alt="" />
-          <p>By Wahid Ari | 03 March 2019</p>
-          <h3>Increasing Prosperity With Positive Thinking</h3>
-        </li>
-        <li>
-          <img src="" alt="" />
-          <p>By Wahid Ari | 03 March 2019</p>
-          <h3>Motivation Is The First Step To Success</h3>
-        </li>
-        <li>
-          <img src="" alt="" />
-          <p>By Wahid Ari | 03 March 2019</p>
-          <h3>Success Steps For Your Personal Or Business</h3>
-        </li>
+        <li><p>knowing you're always on the best energy deal.</p></li>
+        <li><p>Enter your phone number</p></li>
+        <li> <button type="button">Sign up Now</button></li>
       </ul>
-    </section>
-    <!--section 8-->
-    <section>
-      <h2></h2>
-      <p></p>
-      <ul>
-        <li>
-          <h3>Free</h3>
-          <p>Brief price description</p>
-          <p>0</p>
-          <p>$</p>
-          <p>Per / month</p>
-          <ul>
-            <li>Only 2 Operators</li>
-            <li>Notifications</li>
-            <li>Landing Pages</li>
-          </ul>
-          <button type="button">Order Now</button>
-        </li>
-        <li>
-          <h3>Standard</h3>
-          <p>Brief price description</p>
-          <p>5</p>
-          <p>$</p>
-          <p>Per / month</p>
-          <ul>
-            <li>5+ Operators</li>
-            <li>Notifications</li>
-            <li>Landing Pages</li>
-          </ul>
-          <button type="button">Order Now</button>
-        </li>
-        <li>
-          <h3>Premium</h3>
-          <p>Brief price description</p>
-          <p>10</p>
-          <p>$</p>
-          <p>Per / month</p>
-          <ul>
-            <li>10+ Operators</li>
-            <li>Notifications</li>
-            <li>Landing Pages</li>
-          </ul>
-          <button type="button">Order Now</button>
-        </li>
-      </ul>
-    </section>
-    <footer></footer>
+      <p>Made With Love By Figmaland All Right Reserved</p>
+    </footer></footer>
   </body>
 </html>
